--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "funfire-front",
+  "name": "funfire-nft",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@openzeppelin/contracts": "^4.7.3",
+    "axios": "^0.27.2",
+    "ether": "^0.0.9",
+    "framer-motion": "^7.2.1",
+    "ipfs-http-client": "^58.0.0",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
+    "react-icons": "^4.4.0",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
-    "eslint": "9.8.0",
-    "eslint-config-next": "14.2.5"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "hardhat": "^2.11.2"
   }
 }
