--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^7.2.1",
     "ipfs-http-client": "^58.0.0",
     "next": "12.2.5",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
